--- a/AlgoLifter/Modules/DisplayCommander/Views/WholeControlView.xaml
+++ b/AlgoLifter/Modules/DisplayCommander/Views/WholeControlView.xaml
@@ -39,9 +39,9 @@
         <ListView x:Name="listView" Grid.RowSpan="4" Grid.ColumnSpan="2" Margin="5" ItemsSource="{Binding Stepper_statuses}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Width="20" Header="ID" DisplayMemberBinding="{Binding id}"/>
-                    <GridViewColumn Width="100" Header="Version" DisplayMemberBinding="{Binding Version}"/>
-                    <GridViewColumn Width="90" Header="Status" DisplayMemberBinding="{Binding Status}"/>
+                    <GridViewColumn Width="25" Header="ID" DisplayMemberBinding="{Binding id}"/>
+                    <GridViewColumn Width="90" Header="Version" DisplayMemberBinding="{Binding Version}"/>
+                    <GridViewColumn Width="85" Header="Status" DisplayMemberBinding="{Binding Status}"/>
                 </GridView>
             </ListView.View>
         </ListView>
@@ -49,6 +49,7 @@
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="Focusable" Value="False"/>
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.ItemTemplate>
@@ -59,11 +60,13 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <Button x:Name="btnRemove" Grid.Column="0" Content="X" Width="50" MinWidth="50" Command="{Binding RemoveFromCollectionCommand}" />
                         <Button x:Name="btnMoveTo" Grid.Column="1" Content="Move To" Padding="0,5,5,0" MinWidth="2" Command="{Binding GoToPositionCommand}" />
-                        <TextBox x:Name="txtPosition" Grid.Column="2" Height="50" Margin="5" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontSize="14" Text="{Binding Distance}" />
-                        <Label x:Name="lblPosition" Grid.Column="3" Width="100" HorizontalContentAlignment="Right" Content="{Binding Microsteps}" />
+                        <TextBox x:Name="txtPosition" Grid.Column="2" Height="50" Margin="5" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontSize="14" Text="{Binding Revolutions}" />
+                        <Label Grid.Column="3" Width="80" HorizontalContentAlignment="Right" Content="{Binding Distance}"/>
+                        <Label x:Name="lblPosition" Grid.Column="4" Width="100" HorizontalContentAlignment="Right" Content="{Binding Microsteps}" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
@@ -84,7 +87,7 @@
         <Button x:Name="btnStop" Content="STOP" Grid.Column="3" Grid.Row="2" Command="{Binding MotionStopCommand}" />
         <Button x:Name="btnMoveZero" Content="move to 0" Grid.Column="3" Grid.Row="3" Command="{Binding MoveToZeroCommand}" />
         <Label Content="Position:" Grid.Column="2" Grid.Row="1" Height="25" Width="100" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="14" VerticalContentAlignment="Center" />
-        <Label Content="{Binding Position}" Grid.Column="2" Grid.Row="1" Height="25" VerticalAlignment="Bottom"/>
+        <Label Content="{Binding Position}" ContentStringFormat="{}{0:0.00} cm" Grid.Column="2" Grid.Row="1" Height="25" VerticalAlignment="Bottom" HorizontalContentAlignment="Right"/>
         <Label Content="Pulse Divider: " Grid.Column="4" Grid.Row="1"/>
         <Label Content="Ramp Divider: " Grid.Column="4" Grid.Row="2"/>
         <Label Content="Velocity: " Grid.Column="4" Grid.Row="3"/>
